Bug 369079 - Missing "Diagram" and "Code" menus on KF5
Summary: Missing "Diagram" and "Code" menus on KF5
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-19 21:14 UTC by Ralf Habacker
Modified: 2016-09-19 21:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.20.80 (KDE Applications 16.11.80)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2016-09-19 21:14:23 UTC
Running an uninstalled umbrello compiled for KF5 does not show the "Diagram" and "Code" menu.


Reproducible: Always

Steps to Reproduce:
1. Compile umbrello from git master branch for KF5.
2. run umbrello from build dir

Actual Results:  
Menu "Diagram" and "Code" is missing

Expected Results:  
Menu "Diagram" and "Code" should be displayed

The same issue happens with an installed umbrello on windows compiled against stock Qt library.
Comment 1 Ralf Habacker 2016-09-19 21:19:25 UTC
Git commit 3bef8511ca5859e1345c798f8b38a9ae46dfdd72 by Ralf Habacker.
Committed on 19/09/2016 at 21:16.
Pushed by habacker into branch 'master'.

Include umbrelloui.rc into executable to avoid finding issue on KF5.
FIXED-IN:2.20.80 (KDE Applications 16.11.80)

M  +2    -5    umbrello/CMakeLists.txt
M  +1    -0    umbrello/main.cpp
A  +5    -0    umbrello/ui.qrc

http://commits.kde.org/umbrello/3bef8511ca5859e1345c798f8b38a9ae46dfdd72