Include umbrelloui.rc into executable to avoid finding issue on KF5.

BUG:369079
FIXED-IN:2.20.80 (KDE Applications 16.11.80)